# atp_benchmark

./: .env.example  .gitignore  .mcp.json  README.md  opencode.json
analysis/: _build_notebooks.py  _lib.py  prices.json
analysis/notebooks/: 01_pass_at_k.ipynb  02_heatmap.ipynb  03_mcnemar.ipynb  04_cost.ipynb  05_qualitative.ipynb
arbiter/: claude.md  decisions.md  host_setup.md  plan.md  progress.md  readme.md  verify_harness_log.txt
arbiter/scripts/: check_no_secrets.sh  verify_harness.sh
harness/: Dockerfile  __init__.py  docker-compose.yml  setup.sh
harness/lean-project/: AtpHarness.lean  lake-manifest.json  lakefile.toml  runs
harness/lean-project/AtpHarness/: Smoke.lean
harness/lib/: __init__.py  budget.py  grader.py  runner.py
harness/lib/runners/: __init__.py  _common.py  claude_code.py  deepseek_v4pro.py  goedel_v2.py
harness/mcp-lean-server/: pyproject.toml
harness/mcp-lean-server/src/atp_mcp_lean/: __init__.py  repl_session.py  server.py
harness/mcp-lean-server/tests/: test_smoke.py
problems/: build_registry.py  registry.json  selection_criteria.md
report/: outline.md
results/: transcripts
results/raw/claude-code/putnam_2022_a3/: 0.json
results/raw/deepseek-v4pro/putnam_2022_a3/: 0.json
systems/claude-code/: Dockerfile  README.md  prompt.txt  run.sh  runs  skill.md
systems/deepseek-v4pro/: Dockerfile  README.md  opencode.config.json  prompt.txt  run.sh  runs
systems/goedel-v2/: Dockerfile  README.md  inference.py  run.sh  runs
