[project]
name = "atp-mcp-lean"
version = "0.1.0"
description = "MCP server exposing a real Lean 4 REPL (loogle, exact?, apply?, find, lake build) for the ATP harness"
requires-python = ">=3.10"
dependencies = [
  "lean-interact>=0.11.2,<0.12",
  "mcp>=1.27.0,<2.0",
]

[project.scripts]
atp-mcp-lean = "atp_mcp_lean.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
